--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sucrase": "^3.10.1"
   },
   "scripts": {
+    "setup-db": "yarn sequelize db:migrate && yarn sequelize db:seed:all",
     "dev": "nodemon src/server.js",
     "queue": "nodemon src/queue.js",
     "dev:debug": "nodemon --inspect src/server.js"
